# ez-sendgrid

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  entrypoint.sh  inventory.example.yml  pyproject.toml  test.html
ez_sendgrid/: cmd.py  uploader.py
